.. This file should contain the changes for the last release only, which
   will be included on the package's page on pypi. All older entries are
   kept in HISTORY.txt

Changelog
=========

Plone 4.0 - UNRELEASED
----------------------

- Write the doctype definition in the main_template in a way that does not
  claim to be valid XML, as the main_template really isn't.
  [hannosch]

- Worked around `sys._getframe` call in mark_view.
  [malthe, hannosch]

- Removed macro slot for changing the document type; this was not
  correct XML and should this flexibility be required, it's
  recommended to customize `main_template.pt`.
  [malthe]

- Turned deprecated string 'Unauthorized' exceptions into real exceptions.
  [davisagli]

- Removed the migration tool. Upgrades are handled by GenericSetup alone.
  [hannosch]

- Moved all migrations and migration tests out to a new package called
  plone.app.upgrade.
  [hannosch]

- Removed module alias for the ploneview formerly named plone.
  [hannosch]

- Removed the interface tool and some unused functions from the PloneTool.
  [hannosch]

- Removed deprecated code. Our deprecation policy allows us to deprecate in
  the 3.x line and remove in 4.0.
  [hannosch]

- Refactored the special NotFound error handling into an exception view.
  [hannosch]

- Clarified content language versus response language handling.
  [hannosch]

- Removed persistent control panel tool. The control panel section is based
  on normal actions, stored in the actions tool.
  [hannosch]

- Removed unmaintained and unused Favorite content type.
  [hannosch]

- Removed controlpanel.xml files and related migrations. The new controlpanel
  overview is backed by normal actions from the actions tool.
  [hannosch]

- Removed the plone_control_panel template, which is superseded by a view
  in plone.app.controlpanel.
  [hannosch]

- Removed the graphviz-based reference visualization from standard content
  types, since Archetypes has stopped supporting it.