@@ -8,6 +8,9 @@ Changelog
 Plone 4.0 - UNRELEASED
 ----------------------
 
+- Changed workflow actor variable from user/getUserName to user/getId.
+  http://dev.plone.org/plone/ticket/7398.
+
 - Write the doctype definition in the main_template in a way that does not
   claim to be valid XML, as the main_template really isn't.
   [hannosch]
